chandeliers-lus/tests/compile_fail/ui/causality/redef-var-oo.rs
chandeliers_lus::decl! {
    node foo() returns (a : bool; a : int);
    let a = 1; tel
}

fn main() {}
