chandeliers-lus/tests/compile_fail/ui/causality/redef-var-oo.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-oo.rs:2:35
  |
2 |     node foo() returns (a : bool; a : int);
  |                                   ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-oo.rs:2:25
  |
2 |     node foo() returns (a : bool; a : int);
  |                         ^
